# XianyuAutoAgent

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  XianyuAgent.py  XianyuApis.py  XianyuGraph.py  config.json  context_manager.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
prompts/: confirm_discount_prompt.txt  default_prompt.txt  price_prompt.txt  propose_discount_prompt.txt  router_prompt.txt  tech_prompt.txt
tests/: test_agent_logic.py  test_main_flow.py  test_xianyu_apis.py
utils/: reporting_utils.py  xianyu_utils.py
